fixed contact link

--- a/index.html
+++ b/index.html
@@ -12,26 +12,22 @@
     <div class="container">
   <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">"Logo"</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">|   About Me</a>
+          <a class="nav-link" href="AboutMe.html">|   About Me </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">|   Fields of Activity</a>
+          <a class="nav-link" href="FieldsOfActivity.html">|   Fields of Activity</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">|   Articles</a>
+            <a class="nav-link" href="Articles.html">|   Articles</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">|   News</a>
+            <a class="nav-link" href="News.html">|   News</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">|   Contact</a>
