updated home, articles

--- a/Articles.html
+++ b/Articles.html
@@ -17,19 +17,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="AboutMe.html">| About Me </a>
+                            <a class="nav-link" href="AboutMe.html">| About Us </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Articles.html">| Articles</a>
+                            <a class="nav-link" href="Articles.html">| Law Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="News.html">| News</a>
+                            <a class="nav-link" href="News.html">| Usefull Links</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Contact.html">| Contact</a>
@@ -38,7 +38,25 @@
                 </div>
             </div>
         </nav>
+            <h3 class="articles-header">Τα άρθρα και σεμινάρια των συνεργατών μας</h3>
+            <h5>ΣΕΜΙΝΑΡΙΑ</h5>
+            <p>
+Στην Ευρώπη: <br />
+• Συμμετοχή στο πρόγραμμα Common Study Programme on criminal Justice and Critical
+Criminology (στα αγγλικά) στα ακόλουθα πανεπιστήμια:
+- Democritus panepistimio tis Thrakis, Komotini (Grèce, mai 1999) - Universita degli Studi di Bologna (Italie, octobre
+1998) - Universiteit van Gent (Belgique, mai 1998) - Middelsex University, Endfield (Angleterre, octobre 1997) -
+Universidad de Barcelona (Espagne, mai 1997) - Erasmus-Universiteit, Rotterdam ( Pays-Bas, octobre 1996) -Institut fur
+Rechtes-und Sosialphilosophie der Universitat des Saarlandes (Allemagne, mai 1996)<br/><br />
+• Συμμετοχή στο XXIV Annual Conference of European Group for study of deviance and social
+control – University of Wales, Great Britain (12-15 septembre 1996) (στα αγγλικά),
+• Συμμετοχή στον κύκλο πανεπιστημιακών παραδόσεων στο Université de Liège (ULg) : Evolution des sociétés après le 11
+septembre 2001 – Liège, Belgique (18 janvier-8 mars 2005) (στα γαλλικά).<br /><br />
+• Συμμετοχή στο κύκλο καλοκαιρινών ευρωπαïκών μαθημάτων « Δίκαιο και Πολιτική σε θέματα μετανάστευσης και ασύλου στην
+Ευρωπαϊκή Ένωση» διοργανωμένο στις Βρυξέλλες από τις 4 έως τις 15 Ιουλίου 2005 από το ακαδημαϊκό Δίκτυο ευρωπαϊκών
+σπουδών ODYSSEUS σε θέματα ασύλου και μετανάστευσης στην Ευρώπη.
 
+            </p>
     </div>
     <script src="index.js"></script>
 </body>
