--- a/Contact.html
+++ b/Contact.html
@@ -17,19 +17,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="AboutMe.html">| About Me </a>
+                            <a class="nav-link" href="AboutMe.html">| About Us </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Articles.html">| Articles</a>
+                            <a class="nav-link" href="Articles.html">| Law Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="News.html">| News</a>
+                            <a class="nav-link" href="News.html">| Usefull Links</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Contact.html">| Contact</a>
@@ -39,17 +39,17 @@
             </div>
         </nav>
         
-           <h1 class="contact">Contact information:</h1> 
+           <h3 class="contact-header">Στοιχεία Επικοινωνίας:</h3> 
             <br/>
             <p class="contact">
-        🏙 Adress : <strong>37, Handakos str., Heraklion</strong>
+               <span class="emoji">🏙</span>  Διεύθυνση: <strong>Χάνδακος 37, Ηράκλειο Κρήτης</strong>
             <br/><br />
-        ☎ Telephone : <strong>2810298349</strong>
+                <span class="emoji">☎</span> Τηλέφωνο : <strong>2810298349</strong>
             <br/>
             <br />
-        📱 Cellphone : <strong>697483838483</strong> 
+                <span class="emoji">📱</span> Κινητό : <strong>697483838483</strong> 
             <br /><br />
-        📧 Email : <strong>yiannis@themelis.com</strong>
+                <span class="emoji">📧</span> Email : <strong>yiannis@themelis.com</strong>
             <br/>
         </p>
     </div>
