--- a/index.html
+++ b/index.html
@@ -15,28 +15,33 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="AboutMe.html">|   About Me </a>
+          <a class="nav-link" href="AboutMe.html">| About Us </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="FieldsOfActivity.html">|   Fields of Activity</a>
+          <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="Articles.html">|   Articles</a>
+          <a class="nav-link" href="Articles.html">| Law Articles</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="News.html">|   News</a>
+          <a class="nav-link" href="News.html">| Usefull Links</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">|   Contact</a>
+          <a class="nav-link" href="Contact.html">| Contact</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
+      <p class="home">
+        Καλωσήρθατε στην ηλεκτρονική σελίδα του δικηγορικού γραφείου "Θέμελης".<br />
+         Εδώ θα βρείτε πληροφορίες για εμάς, χρήσιμους συνδέσμους, δημοσιευμένα άρθρα μας <br />
+         καθώς και το ευρύ φάσμα απασχόλησης του γραφείου.<br /> Πατώντας τον σύνδεσμο Contact μπορείτε να μας βρείτε κάθε στιγμή.
+      </p>
     </div>
 <script src="index.js"></script>
 </body>
