--- a/AboutMe.html
+++ b/AboutMe.html
@@ -17,39 +17,43 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="AboutMe.html">| About Me </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Articles.html">| Articles</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="News.html">| News</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Contact.html">| Contact</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="AboutMe.html">| About Us </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Articles.html">| Law Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="News.html">| Usefull Links</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Contact.html">| Contact</a>
+                    </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <h5 class="aboutme-header">Ιωάννης Θέμελης</h5>
                 <p class="aboutme">
-                    Γεννήθηκα στο Ηράκλειο, Κρήτης το Σεπτέμβριο του 1975. Τελείωσα με άριστα το 2ο Γενικό Λύκειο Ηρακλείου. Σπούδασα στο
+                    
+                     Γεννήθηκα στο Ηράκλειο, Κρήτης το Σεπτέμβριο του 1975. Τελείωσα με άριστα το 2ο Γενικό Λύκειο Ηρακλείου. Σπούδασα στο
                     Δημοκρίτειο Πανεπιστήμιο Θράκης (ΔΠΘ) το χρονικό διάστημα 1995-1999 με βαθμό πτυχίου Λίαν Καλώς.
                     Στη συνέχεια έκανα το στρατιωτικό μου ως αερονόμος στο σώμα της Ελληνικής Αεροπορίας και μετά την απόλυσή μου
                     ακολούθησαν οι μεταπτυχιακές μου σπουδές πάνω στο Ευρωπαϊκό Δίκαιο στο Université de Liége (ULg, Βέλγιο) με μεταπτυχιακή
                     εργασία πάνω στο Ευρωπαϊκό Ποινικό (Τρομοκρατία) το χρονικό διάστημα 2003-2005.
+                    <br /><br />
                     Μιλώ με επάρκεια και μεταφράζω Αγγλικά, Γαλλικά, Ιταλικά και έχω γνώσεις πάνω στο World, Excess, Internet κ.α.
                     Από το 2000 έκανα την άσκησή μου ως δικηγόρος στο Δικηγορικό Σύλλογο Ηρακλείου κι από τον Αύγουστο του 2002 είμαι
                     ενεργό, μάχιμο μέλος του με έδρα το γραφείο μου στη Μιλάτου αρ. 1 και μετέπειτα στην Χάνδακος αριθμός 37.
                     Από το 2010 είμαι νομικός συνεργάτης της Παγκρήτιας Συνεταιριστικής Τράπεζας (ΣΥΝΠΕ) αρχικά στα καταστήματα Πύργου,
                     Ασημίου και Πεζών και μετά στο κατάστημα Αρχανών Ηρακλείου.
-                    Έχω παρακολουθήσει πλήθος σεμιναρίων ειδικών νομικών θεμάτων τόσο στην Ελλάδα όσο και στο Εξωτερικό.
+                    <br /><br />
+                 Έχω παρακολουθήσει πλήθος σεμιναρίων ειδικών νομικών θεμάτων τόσο στην Ελλάδα όσο και στο Εξωτερικό.
 
                 </p>
     </div>
