--- a/FieldsOfActivity.html
+++ b/FieldsOfActivity.html
@@ -17,23 +17,23 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="AboutMe.html">| About Me </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Articles.html">| Articles</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="News.html">| News</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Contact.html">| Contact</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="AboutMe.html">| About Us </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Articles.html">| Law Articles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="News.html">| Usefull Links</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Contact.html">| Contact</a>
+                    </li>
                     </ul>
                 </div>
             </div>
