changes of the client (css mostly)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Yiannis'WebPage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <style>
+          @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+        </style>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -37,11 +40,7 @@
   </div>
 </nav>
 
-      <p class="home">
-        Καλωσήρθατε στην ηλεκτρονική σελίδα του δικηγορικού γραφείου "Θέμελης".<br />
-         Εδώ θα βρείτε πληροφορίες για εμάς, χρήσιμους συνδέσμους, δημοσιευμένα άρθρα μας <br />
-         καθώς και το ευρύ φάσμα απασχόλησης του γραφείου.<br /> Πατώντας τον σύνδεσμο Contact μπορείτε να μας βρείτε κάθε στιγμή.
-      </p>
+      
     </div>
 <script src="index.js"></script>
 </body>
