--- a/Articles.html
+++ b/Articles.html
@@ -7,6 +7,9 @@
     <title>Yiannis'WebPage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+        </style>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -38,7 +41,7 @@
                 </div>
             </div>
         </nav>
-            <h3 class="articles-header">Τα άρθρα και σεμινάρια των συνεργατών μας</h3>
+            <h3 class="articles-header">ΑΡΘΡΑ ΚΑΙ ΣΕΜΙΝΑΡΙΑ</h3>
             <h5>ΣΕΜΙΝΑΡΙΑ</h5>
             <p>
 Στην Ευρώπη: <br />
