additions in Articles

--- a/Articles.html
+++ b/Articles.html
@@ -42,24 +42,72 @@
             </div>
         </nav>
             <h3 class="articles-header">ΑΡΘΡΑ ΚΑΙ ΣΕΜΙΝΑΡΙΑ</h3>
+           <h5>ΑΡΘΡΑ</h5>
+            <p>Μεταπτυχιακή Εργασία :
+            <br /><br />
+            • « Κριτική προσέγγιση του συστήματος ανταλλαγής πληροφοριών ανάμεσα στα κράτη μέλη της Ευρωπαϊκής Ένωσης ενόψει της
+            αντιμετώπισης εγκλημάτων τρομοκρατίας (programme de la Haye). » (στα γαλλικά), στα πλαίσια του DEA en droit européen à
+            l’Université de Liège (ULg), υπό την επίβλεψη του καθηγητή Ευρωπαϊκού και Διεθνούς Ποινικού Δικαίου Μοn. Daniel Flore,
+            2005.<br /><br />
+            
+            Πανεπιστημιακές Εργασίες στη Νομική Σχολή του Δημοκρίτειου Παν/μιου Θράκης :
+            <br /><br />
+            • « Το άρθρο 5 του Συντάγματος (1975 – 1986), η ελεύθερη ανάπτυξη της προσωπικότητας και το δικαίωμα συμμέτοχης στην
+            κοινωνική και οικονομική ζωή, προστασία της ζωής, της τιμής και της ελευθερίας. Έκδοση των αλλοδαπών, προσωπική
+            ελευθερία, οικονομική ελευθερία, ελευθερία μετακίνησης και εγκατάστασης – ανάλυση νομολογίας » (στα ελληνικά), στα
+            πλαίσια του Συνταγματικού Δικαίου, υπό την επιτήρηση του επίκουρου καθηγητή Αλκιβιάδη Δερβιτσιώτη, 1999 (βαθμός : 10/10)<br /><br />
+            • « Ερμηνευτική και νομολογιακή ανάλυση του άρθρου 13 του ν. 1729- 1987 κατά των ναρκωτικών » (στα ελληνικά), στα
+            πλαίσια του Ποινικού Δικαίου, υπό την επιτήρηση του επίκουρου καθηγητή Στέφανου Παύλου, 1999 (βαθμός : 7/10)<br /><br />
+            • « Ψυχολογική πραγματογνωμοσύνη, (άρθρο 200 του Κωδ. Ποιν. Δικον.) – τα ερείσματα, τα όρια , η αποδεικτική της αξία σε
+            σχέση με το άρθρο 6 του Συντάγματος και σε συνάρτηση με την αρχή της αναλογικότητας . Νομολογιακή έρευνα » (στα
+            ελληνικά), στα πλαίσια του Ποινικής Δικονομίας, υπό την επιτήρηση του επίκουρου καθηγητή Θεοχάρη Δαλακούρα, 1998 (βαθμός
+            : 8/10)<br /><br />
+            • « Επιτήρηση και Τιμωρία. Η γέννηση της Φυλακής : παρουσίαση και ανάλυση της σκέψης του Michel Foucault », (στα
+            ελληνικά) στα πλαίσια της Ποινικής Καταστολής, υπό την επιτήρηση της επικούρου καθηγήτριας, Αριάδνη Γερούκη, 1997
+            (βαθμός : 9/10 )<br /><br />
+            • « Ψυχοτρόπες ουσίες : ποινικός έλεγχος και κοινωνικός αποκλεισμός », (στα ελληνικά), στα πλαίσια της Εγκληματολογίας,
+            1997<br /><br />
+            • « Φυλακή και σωφρονιστικό σύστημα », παρουσίαση κατά την προβολή του κινηματογραφικού έργου The Shawshank Redemption
+            (Frank Darabotte, USA) στα πλαίσια της θεματικής ημερίδας « Κινηματογράφος και έγκλημα » στο cinéma REX, Κομοτηνή, 1996
+            • « Extra-legal factors affecting juridicial decision – Making proces in the Greek criminal justice system » (στα
+            αγγλικά), παρουσίαση στα πλαίσια του Common Session φοιτητών και καθηγητών του προγράμματος « Criminal justice and
+            critical criminology » ( SOCRATES) στη Γάνδη (Βέλγιο), 3-10 Νοεμβρίου 1996
+</p>
             <h5>ΣΕΜΙΝΑΡΙΑ</h5>
             <p>
-Στην Ευρώπη: <br />
-• Συμμετοχή στο πρόγραμμα Common Study Programme on criminal Justice and Critical
+Στην Ευρώπη: <br /> 
+<ul>
+<li> Συμμετοχή στο πρόγραμμα Common Study Programme on criminal Justice and Critical
 Criminology (στα αγγλικά) στα ακόλουθα πανεπιστήμια:
 - Democritus panepistimio tis Thrakis, Komotini (Grèce, mai 1999) - Universita degli Studi di Bologna (Italie, octobre
 1998) - Universiteit van Gent (Belgique, mai 1998) - Middelsex University, Endfield (Angleterre, octobre 1997) -
 Universidad de Barcelona (Espagne, mai 1997) - Erasmus-Universiteit, Rotterdam ( Pays-Bas, octobre 1996) -Institut fur
-Rechtes-und Sosialphilosophie der Universitat des Saarlandes (Allemagne, mai 1996)<br/><br />
-• Συμμετοχή στο XXIV Annual Conference of European Group for study of deviance and social
-control – University of Wales, Great Britain (12-15 septembre 1996) (στα αγγλικά),
-• Συμμετοχή στον κύκλο πανεπιστημιακών παραδόσεων στο Université de Liège (ULg) : Evolution des sociétés après le 11
-septembre 2001 – Liège, Belgique (18 janvier-8 mars 2005) (στα γαλλικά).<br /><br />
-• Συμμετοχή στο κύκλο καλοκαιρινών ευρωπαïκών μαθημάτων « Δίκαιο και Πολιτική σε θέματα μετανάστευσης και ασύλου στην
+Rechtes-und Sosialphilosophie der Universitat des Saarlandes (Allemagne, mai 1996)</li><br/><br />
+<li>Συμμετοχή στο XXIV Annual Conference of European Group for study of deviance and social
+control – University of Wales, Great Britain (12-15 septembre 1996) (στα αγγλικά)</li><br /><br />
+<li>Συμμετοχή στον κύκλο πανεπιστημιακών παραδόσεων στο Université de Liège (ULg) : Evolution des sociétés après le 11
+septembre 2001 – Liège, Belgique (18 janvier-8 mars 2005) (στα γαλλικά).</li><br /><br />
+<li> Συμμετοχή στο κύκλο καλοκαιρινών ευρωπαïκών μαθημάτων « Δίκαιο και Πολιτική σε θέματα μετανάστευσης και ασύλου στην
 Ευρωπαϊκή Ένωση» διοργανωμένο στις Βρυξέλλες από τις 4 έως τις 15 Ιουλίου 2005 από το ακαδημαϊκό Δίκτυο ευρωπαϊκών
-σπουδών ODYSSEUS σε θέματα ασύλου και μετανάστευσης στην Ευρώπη.
-
-            </p>
+σπουδών ODYSSEUS σε θέματα ασύλου και μετανάστευσης στην Ευρώπη.</li><br /><br />
+</ul>
+        </p>
+        <p>
+            Στην Ελλάδα: <br />
+            <ul>
+        <li> Συμμετοχή στο Εκπαιδευτικό Σεμινάριο Δικηγόρων , στο πλαίσιο του ευρωπαϊκού προγράμματος : « Το Δικαίωμα της Ισότητας
+        : από την νομοθεσία στην καθημερινή ζωή » στο Ηράκλειο διοργανωμένο από το Κέντρο Έρευνας σε θέματα Ισότητας (9-11
+        Ιανουαρίου 2001)</li><br /><br />
+        <li> Συμμετοχή στο « Βαλκανικό συνέδριο Ποινικής Δικονομίας », διοργανωμένο από το Τομέα Ποινικού Δικαίου και Ποινικής
+        Δικονομίας του Δημοκρίτειου Παν/μιου Θράκης με θέμα : « Εγγυήσεις για την προστασία των θεμελιωδών δικαιωμάτων και μορφή
+        της ποινικής δίκης », Κομοτηνή (20-22 Οκτωβρίου 1997)</li><br /><br />
+        <li> Μέλος της ερευνητικής ομάδας του Εργαστηρίου Εγκληματολογίας , Τομέας Ποινικού Δικαίου και Ποινικής Δικονομίας, του
+        Δημοκρίτειου Παν/μιου Θράκης, υπό την επίβλεψη του καθηγητή Βασιλείου Καρύδη και της επικούρου καθηγήτριας Σοφίας Βιδάλη
+        ( 1995-1999)</li><br /><br />
+        <li> Συμμετοχή σε διάφορες άλλες ημερίδες και σεμινάρια διοργανωμένα από το Δημοκρίτειο Παν/μιο Θράκης, τη Νομική Σχολή
+        Αθήνας και Θεσσαλονίκης, το Δικηγορικό Σύλλογο Ηρακλείου</li>
+</ul>
+</p>
     </div>
     <script src="index.js"></script>
 </body>
