--- a/AboutMe.html
+++ b/AboutMe.html
@@ -50,7 +50,7 @@
                     ακολούθησαν οι μεταπτυχιακές μου σπουδές πάνω στο Ευρωπαϊκό Δίκαιο στο Université de Liége (ULg, Βέλγιο) με μεταπτυχιακή
                     εργασία πάνω στο Ευρωπαϊκό Ποινικό (Τρομοκρατία) το χρονικό διάστημα 2003-2005.
                     <br /><br />
-                    Μιλώ με επάρκεια και μεταφράζω Αγγλικά, Γαλλικά, Ιταλικά και έχω γνώσεις πάνω στο World, Excess, Internet κ.α.
+                    Μιλώ με επάρκεια και μεταφράζω Αγγλικά, Γαλλικά, Ιταλικά και έχω γνώσεις πάνω στο Word, Excess, Internet κ.α.
                     Από το 2000 έκανα την άσκησή μου ως δικηγόρος στο Δικηγορικό Σύλλογο Ηρακλείου κι από τον Αύγουστο του 2002 είμαι
                     ενεργό, μάχιμο μέλος του με έδρα το γραφείο μου στη Μιλάτου αρ. 1 και μετέπειτα στην Χάνδακος αριθμός 37.
                     Από το 2010 είμαι νομικός συνεργάτης της Παγκρήτιας Συνεταιριστικής Τράπεζας (ΣΥΝΠΕ) αρχικά στα καταστήματα Πύργου,
