--- a/AboutMe.html
+++ b/AboutMe.html
@@ -41,7 +41,10 @@
                 </div>
             </div>
         </nav>
+        <img src="border1.png" class="amphoto"/>
+
         <h5 class="aboutme-header">Ιωάννης Θέμελης</h5>
+   
                 <p class="aboutme">
                     
                      Γεννήθηκα στο Ηράκλειο, Κρήτης το Σεπτέμβριο του 1975. Τελείωσα με άριστα το 2ο Γενικό Λύκειο Ηρακλείου. Σπούδασα στο
