--- a/Contact.html
+++ b/Contact.html
@@ -45,14 +45,14 @@
            <h3 class="contact-header">Στοιχεία Επικοινωνίας:</h3> 
             <br/>
             <p class="contact">
-               <span class="emoji">🏙</span>  Διεύθυνση: <strong>Χάνδακος 37, Ηράκλειο Κρήτης</strong>
+               <span class="emoji">🏙</span>  Διεύθυνση: <strong>Χάνδακος 37, Ηράκλειο Κρήτης, ΤΚ 71 202</strong>
             <br/><br />
-                <span class="emoji">☎</span> Τηλέφωνο : <strong>2810298349</strong>
+                <span class="emoji">☎</span> Τηλέφωνο : <strong>2810 284 100</strong>
             <br/>
             <br />
-                <span class="emoji">📱</span> Κινητό : <strong>697483838483</strong> 
+                <span class="emoji">📱</span> Κινητό : <strong>6944 254 771</strong> 
             <br /><br />
-                <span class="emoji">📧</span> Email : <strong>yiannis@themelis.com</strong>
+                <span class="emoji">📧</span> Email : <strong>themelis_1@yahoo.gr</strong>
             <br/>
         </p>
     </div>
