--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </div>
   </div>
 </nav>
-
-      
+     <img src="homephoto.jpg" class="homephotos"/>
+    <img src="homephoto2.jpg" class="homephotos"/>
     </div>
 <script src="index.js"></script>
 </body>
