--- a/News.html
+++ b/News.html
@@ -15,6 +15,11 @@
 
 <body>
     <div class="container">
+        <div class=logo>
+            <h1><span class="bigger-letters">I</span class="bigger-letters">OANNIS <span class="bigger-letters">T</span>. <span
+                    class="bigger-letters">T</span>HEMELIS</h1>
+            <h2><span class="text-between-line">Law Office</span> </h2>
+        </div>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarNav">
