--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <style>
           @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+
         </style>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="container">
+      <div class=logo>
+        <h1><span class="bigger-letters">I</span class="bigger-letters">OANNIS <span class="bigger-letters">T</span>. <span
+            class="bigger-letters">T</span>HEMELIS</h1>
+        <h2><span class="text-between-line">Law Office</span> </h2>
+      </div>
+    
   <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNav">
