--- a/logo.html
+++ b/logo.html
@@ -6,24 +6,36 @@
     <title>Logo</title>
     <style>
         .logo {
-  padding: 120px 70px;
+  padding: 100px 70px;
   text-align: center;
   background: rgb(14, 14, 14);
-  color: #f9f9f9;;
-  width:fit-content;
+  color: #f9f9f9;
+  
   font-weight: 200;
   font-family: 'Times New Roman', Times, serif;
 }
-h1,
-h2{
+h1 {
     font-weight: lighter;
-    box-shadow: #f9f9f9;
 }
+h2 {
+   width: 100%; 
+   text-align: center; 
+   border-bottom: 1px solid #f9f9f9;; 
+   line-height: 0.1em;
+   margin: 10px 0 20px; 
+   
+} 
 
-span {
+.bigger-letters {
     font-size: 60px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 50;
+}
+
+.text-between-line{
+    font-weight: lighter;
+    background-color:rgb(14, 14, 14);
+    padding: 0 10px;
 }
 
 
@@ -31,8 +43,8 @@ span {
 </head>
 <body>
     <div class=logo>
-    <h1><span>I</span>OANNIS <span>T</span>. <span>T</span>HEMELIS</h1>
-    <h2> ~Law Office~ </h2>
+    <h1><span class="bigger-letters">I</span class="bigger-letters">OANNIS <span class="bigger-letters">T</span>. <span class="bigger-letters">T</span>HEMELIS</h1>
+    <h2><span class="text-between-line">Law Office</span> </h2>
     </div>
 </body>
 </html>
