imges and usefull links

--- a/Contact.html
+++ b/Contact.html
@@ -46,9 +46,11 @@
                 </div>
             </div>
         </nav>
-        
+        <div class="row">
+            <div class="col">
            <h3 class="contact-header">Στοιχεία Επικοινωνίας:</h3> 
             <br/>
+    
             <p class="contact">
                <span class="emoji">🏙</span>  Διεύθυνση: <strong>Χάνδακος 37, Ηράκλειο Κρήτης, ΤΚ 71 202</strong>
             <br/><br />
@@ -60,6 +62,11 @@
                 <span class="emoji">📧</span> Email : <strong>themelis_1@yahoo.gr</strong>
             <br/>
         </p>
+        </div>
+        <div class="col"> 
+    <img class="contact-img" src="gavel&Libra.jpg" />
+    </div>
+    </div>
     </div>
     <script src="index.js"></script>
 </body>
