--- a/News.html
+++ b/News.html
@@ -46,7 +46,44 @@
                 </div>
             </div>
         </nav>
-
+<img class= "links-photo" src="p3border.jpg" />
+<ul class="links"><div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <li><a href="http://www.areiospagos.gr" target="_blank" tabindex="1">Άρειος Πάγος</a></li>
+            <li><a href="http://www.adjustice.gr/webcenter/portal/ste?_afrLoop=5182937069513060#!%40%40%3F_afrLoop%3D5182937069513060%26_adf.ctrl-state%3Dj7cj6fga3_4"
+                    target="_blank" tabindex="1">Συμβούλιο της Επικρατείας</a></li>
+            <li><a href="https://efeteioathinon.gr/" target="_blank" tabindex="1">Εφετείο Αθηνών</a></li>
+            <li><a href="http://www.protodikeio-ath.gr/opencms_prot/opencms/ProtSite/" target="_blank" tabindex="1">Πρωτοδικείο
+                    Αθηνών</a></li>
+            <li><a href="https://www.protodikeio-peir.gr/" target="_blank" tabindex="1">Πρωτοδικείο Πειραιώς</a></li>
+            <li><a href="http://www.protodikeio-thes.gr/opencms_prot/opencms/ProtSite/" target="_blank" tabindex="1">Πρωτοδικείο
+                    Θεσσαλονίκης</a></li>
+            <li><a href="http://olomeleia.gr/" target="_blank" tabindex="1">Ολομέλεια Προέδρων Δικηγορικών Συλλόγων</a></li>
+            <li><a href="https://www.dsh.gr/" target="_blank" tabindex="1">Δικηγορικός Σύλλογος Ηρακλείου</a></li>
+            <li><a href="https://www.dsth.gr/?fbclid=IwAR1bSy6F7uGPVgUSeQwAbylH-J7xensP1oBv1M5axj0FLgHR122fiPY06jA" target="_blank"
+                    tabindex="1">Δικηγορικός Σύλλογος Θεσσαλονίκης</a></li>
+            <li><a href="https://www.dsa.gr/?fbclid=IwAR0U5yFHuI0aaQSbszAGqP1EWBYDuWLkRaK055wiMDSwZc-6kWmBDaN-eR8" target="_blank"
+                    tabindex="1">Δικηγορικός Σύλλογος Αθηνών</a></li>
+            <li><a href="http://www.protodikio-her.gr/" target="_blank" tabindex="1">Πρωτοδικείο Ηρακλείου</a></li>
+            <li><a href="https://eirheraklion.wordpress.com/?fbclid=IwAR1r4Lf1nlA7Fb44IbvqlKz0QTbem8I3nPVXOZkqJBqQ4ple_BTEI58Q9fA"
+                    target="_blank" tabindex="1">Ειρηνοδικείο Ηρακλείου</a></li>
+        </div>
+        <div class="col-sm">
+            <li><a href="https://www.europarl.europa.eu/portal/en?fbclid=IwAR3Ygh4RRSNvXqSapSCT2Edr4M-bm2GHw1AY30mu8Tu3ug9Ma43GIHbVtvg"
+                    target="_blank" tabindex="1">Ευρωπαϊκό Κοινοβούλιο</a></li>
+    <li><a href="https://eur-lex.europa.eu/oj/direct-access.html?locale=en&fbclid=IwAR3xt3hjU9uM-YCSzzFAtXA0CEFuh-SIg--4oAMGnnVndfq6nvt4AAxSjX4" target="_blank" tabindex="1">Νομοθεσία Ευρωπαϊκής Ένωσης</a></li>
+   <li><a href="https://ec.europa.eu/growth/sectors/mechanical-engineering/personal-protective-equipment_en?fbclid=IwAR2I57z78pasEPfHc64Y5XJtFp6ANK6P2KBrQjuA7S_FYLgglAepaOCPGYQ" target="_blank" tabindex="1">Ευρωπαϊκή Επιτροπή</a></li>
+   <li><a href="https://www.consilium.europa.eu/el/?fbclid=IwAR2e_L3pEMBfUhofZeoeO_j3oj-TsHK03R0M8rPm7DFecv_kxXDIgFiLVq8" target="_blank" tabindex="1">Ευρωπαϊκό Συμβούλιο Συμβούλιο της Ευρωπαϊκής Ένωσης</a></li>
+   <li><a href="https://www.uoa.gr/scholes_kai_tmimata/nomiki/?fbclid=IwAR1ZfpwzIHFebHnTkOxkrpm4HwnKimZLgVbHJOq2Yu4LHAIDirP6j4dacWk" target="_blank" tabindex="1">Νομική Σχολή Εθνικού και Καποδιστριακού Πανεπιστημίου Αθηνών</a></li>
+   <li><a href="https://www.law.auth.gr/?fbclid=IwAR11yzMI6Yu0ULKld2rXHBxHGftnxIJVif-7_PZSOfGX1s_41YVoi6NMktw" target="_blank" tabindex="1">Νομική Σχολή Αριστοτελείου Πανεπιστημίου Θεσσαλονίκης</a></li>
+   <li><a href="https://law.duth.gr/?fbclid=IwAR0QoCwMPIzxsKZZTIgB4ZhyAvc0qNJch5VGonvzuihAUheMvp1uL8IdFIY" target="_blank" tabindex="1">Τμήμα Νομικής Δημοκριτείου Πανεπιστημίου Θράκης </a></li>
+</div>
+</div>
+</div>
+    
+   
+</ul>
     </div>
     <script src="index.js"></script>
 </body>
