added links and new img

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </nav>
-        <img src="border1.png" class="amphoto"/>
+        <img src="https://scontent.xx.fbcdn.net/v/t1.15752-0/p403x403/140412112_248326999997487_7212989739066191953_n.jpg?_nc_cat=110&ccb=2&_nc_sid=f79d6e&_nc_ohc=CfvWIglYlR0AX-7feaR&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&tp=6&oh=68cfdf328a27fdfa13041e1392221d7a&oe=602BAC76" class="amphoto"/>
 
         <h5 class="aboutme-header">Ιωάννης Θέμελης</h5>
    
