--- a/News.html
+++ b/News.html
@@ -70,6 +70,7 @@
                     target="_blank" tabindex="1">Ειρηνοδικείο Ηρακλείου</a></li>
         </div>
         <div class="col-sm">
+            <li><a href="https://www.ministryofjustice.gr/?fbclid=IwAR2bGNz5HfE69z2WGiGh_IbHXh96E4lMR_-XdQeqPiBnZd3bBfXk5u7uImI" target="_blank" tabindex="1">Υπουργείο Δικαιοσύνης</a></li>
             <li><a href="https://www.europarl.europa.eu/portal/en?fbclid=IwAR3Ygh4RRSNvXqSapSCT2Edr4M-bm2GHw1AY30mu8Tu3ug9Ma43GIHbVtvg"
                     target="_blank" tabindex="1">Ευρωπαϊκό Κοινοβούλιο</a></li>
     <li><a href="https://eur-lex.europa.eu/oj/direct-access.html?locale=en&fbclid=IwAR3xt3hjU9uM-YCSzzFAtXA0CEFuh-SIg--4oAMGnnVndfq6nvt4AAxSjX4" target="_blank" tabindex="1">Νομοθεσία Ευρωπαϊκής Ένωσης</a></li>
