minor changes / cleaning code / experiment with navba

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
         </style>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -20,27 +23,34 @@
         <h2><span class="text-between-line">Law Office</span> </h2>
       </div>
     
-  <nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg" style="background-color: #7c9473;  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+  font-family: Source Serif Pro, serif;">
   <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="AboutMe.html">| About Us </a>
+          <a class="nav-link" href="about-me.html">| About Us </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
+          <a class="nav-link" href="fields-of-activity.html">| Fields of Activity</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Articles.html">| Law Articles</a>
+          <a class="nav-link" href="articles.html">| Law Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="News.html">| Usefull Links</a>
+          <a class="nav-link" href="usefull-links.html">| Usefull Links</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Contact.html">| Contact</a>
+          <a class="nav-link" href="contact.html">| Contact</a>
         </li>
       </ul>
     </div>
