--- a/Contact.html
+++ b/Contact.html
@@ -7,40 +7,51 @@
     <title>Yiannis'WebPage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
-        </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
         <div class=logo>
-            <h1><span class="bigger-letters">I</span class="bigger-letters">OANNIS <span class="bigger-letters">T</span>. <span
-                    class="bigger-letters">T</span>HEMELIS</h1>
+            <h1><span class="bigger-letters">I</span class="bigger-letters">OANNIS <span
+                    class="bigger-letters">T</span>. <span class="bigger-letters">T</span>HEMELIS</h1>
             <h2><span class="text-between-line">Law Office</span> </h2>
         </div>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg" style="background-color: #7c9473;  padding: 20px;
+      margin-top: 20px;
+      text-align: center;
+      font-family: Source Serif Pro, serif;">
             <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link"  href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="AboutMe.html">| About Us </a>
+                            <a class="nav-link" href="about-me.html">| About Us </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="FieldsOfActivity.html">| Fields of Activity</a>
+                            <a class="nav-link" href="fields-of-activity.html">| Fields of Activity</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Articles.html">| Law Articles</a>
+                            <a class="nav-link" href="articles.html">| Law Articles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="News.html">| Usefull Links</a>
+                            <a class="nav-link" href="usefull-links.html">| Usefull Links</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Contact.html">| Contact</a>
+                            <a class="nav-link active" aria-current="page" href="contact.html">| Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -48,25 +59,25 @@
         </nav>
         <div class="row">
             <div class="col">
-           <h3 class="contact-header">Στοιχεία Επικοινωνίας:</h3> 
-            <br/>
-    
-            <p class="contact">
-               <span class="emoji">🏙</span>  Διεύθυνση: <strong>Χάνδακος 37, Ηράκλειο Κρήτης, ΤΚ 71 202</strong>
-            <br/><br />
-                <span class="emoji">☎</span> Τηλέφωνο : <strong>2810 284 100</strong>
-            <br/>
-            <br />
-                <span class="emoji">📱</span> Κινητό : <strong>6944 254 771</strong> 
-            <br /><br />
-                <span class="emoji">📧</span> Email : <strong>themelis_1@yahoo.gr</strong>
-            <br/>
-        </p>
+                <h3 class="contact-header">Στοιχεία Επικοινωνίας:</h3>
+                <br />
+
+                <p class="contact">
+                    <span class="emoji">🏙</span> Διεύθυνση: <strong>Χάνδακος 37, Ηράκλειο Κρήτης, ΤΚ 71 202</strong>
+                    <br /><br />
+                    <span class="emoji">☎</span> Τηλέφωνο : <strong>2810 284 100</strong>
+                    <br />
+                    <br />
+                    <span class="emoji">📱</span> Κινητό : <strong>6944 254 771</strong>
+                    <br /><br />
+                    <span class="emoji">📧</span> Email : <strong>themelis_1@yahoo.gr</strong>
+                    <br />
+                </p>
+            </div>
+            <div class="col">
+                <img class="contact-img" src="gavel&libra.jpg" />
+            </div>
         </div>
-        <div class="col"> 
-    <img class="contact-img" src="gavel&Libra.jpg" />
-    </div>
-    </div>
     </div>
     <script src="index.js"></script>
 </body>
