--- a/about-me.html
+++ b/about-me.html
@@ -11,9 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
     </style>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
@@ -23,17 +21,17 @@
                     class="bigger-letters">T</span>. <span class="bigger-letters">T</span>HEMELIS</h1>
             <h2><span class="text-between-line">Law Office</span> </h2>
         </div>
-        <nav class="navbar navbar-expand-lg" style="background-color: #7c9473;  padding: 20px;
-          margin-top: 20px;
-          text-align: center;
-          font-family: Source Serif Pro, serif;">
+        <nav class="navbar navbar-expand-md navbar-light" style="background-color: #7c9473;  padding: 20px;
+              margin-top: 20px;
+              text-align: center;
+              font-family: Source Serif Pro, serif;">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
@@ -85,7 +83,9 @@
 
         </p>
     </div>
-    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
